feat: внедрена система RBAC с тремя ролями, проверка прав, блокировкой, ограничением доступа к эндпоинтам
